- fix code smells